# BOM-Extracting-Data

./: .$flow.drawio.bkp  .gitignore  MC121EVMD(001)_TI-BOM.xlsx  flow.drawio  template10_output.csv  template11_output.csv  template12_output.csv  template13_output.csv  template1_output.csv  template2_output.csv  template3_output.csv  template4_output.csv  template5_output.csv  template6_output.csv  template7_output.csv  template8_output.csv  template9_output.csv
Dashboard/: package-lock.json  package.json
Dashboard/app/: ShaderBackground.jsx  charts.jsx  globals.css  layout.jsx  page.jsx
Dashboard/lib/: config.js  criticality.js  data.js  model.js  parts.js
Data/: .~lock.EMK107B7105KAHT.pdf#  INA240A2PWR.xlsx  LMH6642MFNOPB.xlsx  TPS73033DBVR.xlsx
code/: generate_all_materials.py  test.py
code/main_package/: runner.py
code/main_package/templates/: template13.py  template2.py  template4.py
mat/: BUK6D43-40PX.xlsx  LM27313XQMFNOPB.xlsx  MSP430FR2355TPTR.xlsx  P82B96DGKR.xlsx  TMUX1219DCKR.xlsx  TPD4E004DRYR.xlsx
material_extractor/: .gitignore  README.md  __init__.py  __main__.py  build_dashboard_data.py  materials.yaml  normalizer.py  pipeline.py  pyproject.toml
material_extractor/data/normalization/: materials.yaml  substances.yaml
material_extractor/output/: all_materials.csv  materials_summary.csv
material_extractor/output/individual/: 1051640001.csv  885012207103.csv  BUK6D43-40PX.csv  CL31B105KCHNNNE.csv  CRCW0402680RJNED.csv  CRCW060310K0JNEA.csv  CRCW0603150KFKEA.csv  D3082-05.csv  EMK107BB7225KA-T.csv  HCJ0805ZT0R00.csv  MSP430FR2355TPTR.csv  P82B96DGKR.csv  RBR3LAM40ATR.csv  RT0603DRE07117KL.csv  RT0603DRE0713K3L.csv  SZMM3Z10VST1G.csv  TMUX1219DCKR.csv  TPS73033DBVR.csv
material_extractor/scripts/: init_project.py
material_extractor/src/material_extractor/: __init__.py  config.py
material_extractor/src/material_extractor/cli/: main.py
material_extractor/src/material_extractor/cli/commands/: __init__.py  extract.py  list_templates.py  normalize.py  validate.py
material_extractor/src/material_extractor/core/: detector.py  detectors.py  extractor.py  pipeline.py
material_extractor/src/material_extractor/extractors/: __init__.py
material_extractor/src/material_extractor/models/: __init__.py
material_extractor/src/material_extractor/normalization/: __init__.py  normalizer.py
material_extractor/src/material_extractor/templates/: registry.py
material_extractor/src/material_extractor/utils/: __init__.py
material_extractor/templates/: __init__.py  default_template.py  template1.py  template10.py  template11.py  template12.py  template14.py  template2.py  template3.py  template4.py  template5.py  template6.py  template7.py  template8.py  template9.py
material_extractor/templates/pdf/: eds_composition.yaml  harwin_declaration.yaml  ihs_normalized.yaml  liteon_composition.yaml  molex_bom.yaml  molex_compliance.yaml  nexperia_excel.yaml  samsung_mlcc.yaml  stackpole_sei.yaml  ti_excel.yaml  vishay_mlcc.yaml  wurth_md.yaml  yageo_mlcc.yaml
material_extractor/templates/test_files/: .~lock.template2.pdf#
material_extractor/tests/: conftest.py  test_pipeline.py  test_templates.py
material_extractor/tests/functional/: test_extraction.py
material_extractor/tests/integration/: test_pipeline.py
material_extractor/tests/unit/: test_detectors.py  test_models.py  test_normalizer.py
output/: all_materials.csv  materials_summary.csv
output/individual/: 0603ZC104KAT2A.csv  1051640001.csv  150060BS75000.csv  150080VS75000.csv  50-57-9404.csv  885012207103.csv  C0402C102J3GACTU.csv  CRCW060310K0JNEA.csv  CRCW0603150KFKEA.csv  EMK107B7105KAHT.csv  EMK107BB7225KA-T.csv  HCJ0805ZT0R00.csv  INA240A2PWR.csv  LM27313XQMFNOPB.csv  LMH6642MFNOPB.csv  LTST-C190KGKT.csv  LTST-C190KRKT.csv  RC0603JR-07470RL.csv  RCA12060000ZSEA.csv  RT0603BRC07500RL.csv  RT0603DRE07117KL.csv  RT0603DRE0713K3L.csv  SZMM3Z10VST1G.csv  TMUX1219DCKR.csv  TPD4E004DRYR.csv
template_outputs/: all_materials_across_templates.csv
