[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "material-extractor"
version = "2.0.0"
description = "Extract and normalize material composition from supplier PDFs/XLSXs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only needed for template4 (scanned IPC-1752 form via OCR).
ocr = ["paddleocr", "pymupdf", "numpy"]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
include = ["material_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
